fixed up template

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,9 +14,8 @@
 
     <form>
       <input placeholder="Please enter location"> 
-      <button>Search</button>
+      <button onclick="getLocation()">Search</button>
     </form>
-    
     <p id = "message-1"></p>
     <p id = "message-2"></p>
   </div>
